wave animation and updated styles

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,3 +5,7 @@
 
 @import "components/layout.scss";
 @import "components/animation.scss";
+@import "components/attract.scss";
+@import "components/gui.scss";
+@import "components/water.scss";
+@import "components/questions.scss";
