--- a/_sass/components/_questions.scss
+++ b/_sass/components/_questions.scss
@@ -11,15 +11,20 @@
 	list-style: none;
     padding-left: 0;
     text-align: center;
-    color: $blue;
-    text-transform: uppercase;
-    font-size: 2em;
     li {
     	&:first-of-type {
     		margin-bottom: 1.25em;
     	}
 
     }
+}
+
+.answer-btn {
+    border: none;
+    background: none;
+    color: $blue;
+    text-transform: uppercase;
+    font-size: 2.3em;
 }
 
 .progress {
