--- a/_sass/components/_questions.scss
+++ b/_sass/components/_questions.scss
@@ -1,3 +1,5 @@
+
+
 .question {
 	@extend p;
 	color: $dark-blue;
@@ -11,6 +13,8 @@
 	list-style: none;
     padding-left: 0;
     text-align: center;
+    position: relative;
+    z-index: 2;
     li {
     	&:first-of-type {
     		margin-bottom: 1.25em;
