--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,3 +9,4 @@
 @import "components/gui.scss";
 @import "components/water.scss";
 @import "components/questions.scss";
+@import "components/results.scss";
