--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,5 +1,7 @@
 $blue: #67a6d8; // rgb(103, 166, 216)
 $transparent-blue: rgba(103, 166, 216, 0.5);
+$medium-blue: rgba(58, 103, 168, 0.5);
 $dark-blue: #355da5; //rgb(53, 93, 165);
+$darker-blue: #202c5c;
 $sand: #E5DFD1;
-$blue-gradient: linear-gradient(rgba(103, 166, 216, 0.5), rgba(53, 93, 165, 0.9));
+$blue-gradient: linear-gradient(rgba(103, 166, 216, 0.5), rgba(32, 44, 92, 0.9));
