--- a/_sass/components/_gui.scss
+++ b/_sass/components/_gui.scss
@@ -3,7 +3,11 @@
 }
 
 .home-button {
-	margin: 10px 0px 20px 10px;
+	margin: 10px 0px 20px 15px;
+	svg {
+		width: 38px;
+		filter: drop-shadow( 0px 0px 5px #777);
+	}
 
 }
 
