--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -10,3 +10,4 @@
 @import "components/water.scss";
 @import "components/questions.scss";
 @import "components/results.scss";
+@import "components/rays.scss";
