adjusted logic and other things

--- a/_sass/components/_rays.scss
+++ b/_sass/components/_rays.scss
@@ -29,6 +29,24 @@ div.raybase[data-raybase-position="4"] {
     top: -300px;
 }
 
+div.raybase[data-raybase-position="5"] {
+    top: -400px;
+}
+
+div.raybase[data-raybase-position="6"] {
+    top: -350px;
+}
+
+div.raybase[data-raybase-position="7"] {
+    top: -300px;
+}
+
+div.raybase[data-raybase-position="10"] {
+    top: -300px;
+}
+
+
+
 div.ray {
     display: block;
     width: 0;
