--- a/_sass/components/_results.scss
+++ b/_sass/components/_results.scss
@@ -1,10 +1,24 @@
 #results {
 	position: relative;
 	color: #ffffff;
-	text-align: center;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 	h1 {
 		text-align: center;
 		text-transform: uppercase;
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+	h2 {
+		margin-bottom: 0px;
+	}
+	h3 {
+		font-size: 1.6em;
+		font-style: italic;
+		margin-top: 0px;
 	}
 	p {
 		text-align: left;
