--- a/_sass/components/_results.scss
+++ b/_sass/components/_results.scss
@@ -14,6 +14,7 @@
 	}
 	h2 {
 		margin-bottom: 0px;
+		text-transform: uppercase;
 	}
 	h3 {
 		font-size: 1.6em;
@@ -22,6 +23,10 @@
 	}
 	p {
 		text-align: left;
+	}
+	span {
+		font-style: italic;
+		font-family: 'Adobe Garamond Pro';
 	}
 	button {
 		border: none;
