--- a/_sass/base/_helpers.scss
+++ b/_sass/base/_helpers.scss
@@ -8,3 +8,8 @@
 .in {
     opacity: 1;
 }
+
+// to prevent flicker in Safari caused by css animation
+.no-flick {
+	-webkit-transform:translate3d(0,0,0);
+}
