--- a/_sass/components/_gui.scss
+++ b/_sass/components/_gui.scss
@@ -6,9 +6,11 @@
 
 .home-button {
 	margin: 10px 0px 20px 15px;
+	filter: drop-shadow( 0px 0px 5px #777);
+	-webkit-filter: drop-shadow(0px 0px 5px #777);
 	svg {
 		width: 38px;
-		filter: drop-shadow( 0px 0px 5px #777);
+		//filter: drop-shadow( 0px 0px 5px #777);
 	}
 
 }
