--- a/_sass/components/_questions.scss
+++ b/_sass/components/_questions.scss
@@ -19,6 +19,7 @@
     li {
     	&:first-of-type {
     		margin-bottom: 3em;
+            margin-top: 5em;
     	}
 
     }
@@ -57,5 +58,9 @@
     z-index: 2;
     text-transform: uppercase;
     width: 50%;
-    margin: 200px auto;
+    margin: 0px auto;
+    img {
+        width: 200px;
+        height: auto;
+    }
 }
