--- a/_sass/components/_gui.scss
+++ b/_sass/components/_gui.scss
@@ -5,11 +5,13 @@
 }
 
 .home-button {
-	margin: 10px 0px 20px 15px;
+	margin: 20px 0px 20px 20px;
 	filter: drop-shadow( 0px 0px 5px #777);
 	-webkit-filter: drop-shadow(0px 0px 5px #777);
+	border: none;
+	background: none;
 	svg {
-		width: 38px;
+		width: 48px;
 		//filter: drop-shadow( 0px 0px 5px #777);
 	}
 
