--- a/_sass/components/_questions.scss
+++ b/_sass/components/_questions.scss
@@ -29,7 +29,7 @@
     border: none;
     background: none;
     color: $dark-blue;
-    font-family: 'Adobe Garamond Pro';
+    //font-family: 'Adobe Garamond Pro';
     //text-transform: uppercase;
     font-size: 1.9em;
 }
