--- a/_sass/components/_results.scss
+++ b/_sass/components/_results.scss
@@ -17,6 +17,7 @@
 		text-transform: uppercase;
 	}
 	h3 {
+		font-family: 'TradeGothicW01Cn_18';
 		font-size: 1.6em;
 		font-style: italic;
 		margin-top: 0px;
@@ -26,7 +27,6 @@
 	}
 	span {
 		font-style: italic;
-		font-family: 'Adobe Garamond Pro';
 	}
 	button {
 		border: none;
