--- a/_sass/components/_results.scss
+++ b/_sass/components/_results.scss
@@ -9,8 +9,10 @@
 	h1 {
 		text-align: center;
 		text-transform: uppercase;
-		margin-top: 0px;
-		margin-bottom: 0px;
+		margin-top: 10px;
+		margin-bottom: 10px;
+		line-height: 1em;
+		width: 100vw; // accommodates Northern Water Snake
 	}
 	h2 {
 		margin-bottom: 0px;
