--- a/_sass/base/_mixins.scss
+++ b/_sass/base/_mixins.scss
@@ -24,7 +24,7 @@
 	-webkit-transform: scale($scale);
     -moz-transform: scale($scale);
     transform: scale($scale);
-    -webkit-animation: moveclouds $moveclouds linear infinite, sideWays $sideways ease-in-out infinite alternate;
-    -moz-animation: moveclouds $moveclouds linear infinite, sideWays $sideways ease-in-out infinite alternate;
-    -o-animation: moveclouds $moveclouds linear infinite, sideWays $sideways ease-in-out infinite alternate;
+    -webkit-animation: moveclouds $moveclouds linear infinite;
+    -moz-animation: moveclouds $moveclouds linear infinite;
+    -o-animation: moveclouds $moveclouds linear infinite;
 }
